# utxopia-solana-programs

./: .devnet2-config.json  .env.example  .gitignore  Cargo.toml  DEVNET_DEPLOY_STATUS_2026-06-19.md  README.md  config.json  package.json  skills-lock.json  tsconfig.json  tsconfig.scripts.json  txtx.yml
contracts/: README.md  config.json  package.json
contracts/programs/btc-light-client/: Cargo.toml
contracts/programs/btc-light-client/src/instructions/: extend_blockchain.rs  mod.rs  prune_obsolete_blocks.rs  verify_transaction.rs
contracts/programs/btc-light-client/src/state/: block_header.rs  height_index.rs  light_client.rs  mod.rs  verified_transaction.rs
contracts/programs/btc-light-client/src/utils/: difficulty.rs  mod.rs  pow.rs
contracts/runbooks/: README.md
contracts/scripts/: deploy-devnet.ts  deploy-localnet.ts  devnet-setup.ts  devnet-status.ts  init-deployed.ts  init-fresh-devnet.ts  setup-devnet.ts  setup-localnet.ts  test-all.ts  test-claim-public.ts  test-e2e-claim.ts  test-e2e-onchain.ts  test-helpers.ts  test-integration.ts  test-joinsplit-proof.ts  test-localnet-full.ts  test-name-registry.ts  test-poseidon-onchain.ts  test-prover.ts  test-redemption-lifecycle.ts  test-user-flows.ts  test-zvault-devnet.ts  verify-devnet-setup.ts
contracts/tests/: zvault.ts
docs/: AUDIT_REMEDIATION_2026-06-14_utxopia-solana.md  AUDIT_REMEDIATION_2026-06-14b.md  SDK_FRONTEND_MIGRATION.md
docs/specs/: 2026-06-15-permissioned-pool-solana-plan.md
programs/btc-light-client/: Cargo.toml
programs/btc-light-client/src/: constants.rs  lib.rs
programs/btc-light-client/src/instructions/: extend_blockchain.rs  initialize.rs  mod.rs  prune_obsolete_blocks.rs  reinitialize.rs  verify_transaction.rs
programs/btc-light-client/src/state/: block_header.rs  light_client.rs  mod.rs
programs/btc-light-client/src/utils/: difficulty.rs  difficulty_tests.rs  mod.rs  pda.rs  pow.rs  sha256.rs  u256.rs
programs/svm-tests/: Cargo.toml
programs/svm-tests/tests/: svm.rs
programs/utxopia/: Cargo.toml
programs/utxopia/src/: constants.rs  error.rs  lib.rs  lib_tests.rs
programs/utxopia/src/cpi/: ika.rs  ika_tests.rs  mod.rs
programs/utxopia/src/instructions/: admin_auditor.rs  admin_update_pool.rs  approve_redemption_signing.rs  cancel_redemption.rs  claim_fees.rs  complete_deposit.rs  complete_redemption.rs  complete_redemption_data_tests.rs  complete_redemption_skim_tests.rs  init_tree.rs  init_vk_registry.rs  initialize.rs  initialize_permissioned.rs  joinsplit_common.rs  joinsplit_common_tests.rs  mark_processing.rs  mod.rs  redeem.rs  register_deposit_intent.rs  register_token.rs  request_redemption.rs  rotate_tree.rs  set_pool_config.rs  set_pool_script.rs  shield.rs  transact.rs  unshield.rs  update_token_config.rs  verify_deposit.rs  verify_deposit_v2.rs
programs/utxopia/src/state/: commitment_tree.rs  commitment_tree_tests.rs  deposit_intent.rs  deposit_receipt.rs  mod.rs  nullifier.rs  pool.rs  pool_config.rs  pool_config_tests.rs  pool_tests.rs  redemption.rs  token_config.rs  token_config_tests.rs  utxo.rs  utxo_tests.rs  verified_tx_reader.rs  vk_registry.rs  vk_registry_tests.rs
programs/utxopia/src/utils/: bitcoin.rs  bitcoin_tests.rs  chadbuffer.rs  chadbuffer_tests.rs  crypto.rs  crypto_tests.rs  events.rs  groth16.rs  mod.rs  policy.rs  policy_tests.rs  secp256k1.rs  secp256k1_tests.rs  sighash.rs  token.rs  validation.rs  validation_tests.rs
scripts/: deploy-fresh-devnet.ts  devnet-setup.ts  e2e-localnet.ts  fix-mint-authority.ts  init-deployed.ts  init-fresh-devnet.ts  init-permissioned.ts  regtest-flow.ts  regtest-helpers.ts  relay-deposit.ts  set-mint-authority.ts  test-helpers.ts  test-redemption-lifecycle.ts  verify-deployment.ts
scripts/test-flow/: README.md  assertions.ts  bitcoin-regtest.ts  chadbuffer.ts  config.ts  constants.ts  deposit.ts  joinsplit-proof.ts  light-client.ts  merkle.ts  pdas.ts  scenario.ts  solana-context.ts  state-parsing.ts  state-recording.ts
tests/: zvault.ts
tests/helpers/: instructions.ts
tests/integration/: claim-groth16-demo.test.ts  (+2 more)
(+42 files in other folders)
